--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -42,6 +42,8 @@
     "clientPackageManager": "npm",
     "clientThemeVariant": "",
     "otherModules": [],
-    "languages": ["en", "fr"]
+    "languages": ["en", "fr"],
+    "entities": ["Project", "Extra", "HomeType"],
+    "lastLiquibaseTimestamp": 1626521274000
   }
 }
