Integrate Encryption data to user service

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -130,3 +130,7 @@ jhipster:
 # ===================================================================
 
 # application:
+encryption:
+  aes:
+    secretKey: NgQmL0Fxjx
+    salt: OEkp59ouzV
