--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -154,3 +154,7 @@ jhipster:
 # ===================================================================
 
 # application:
+encryption:
+  aes:
+    secretKey: NgQmL0Fxjx
+    salt: OEkp59ouzV
