--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -95,13 +95,8 @@ spring:
     # The commented value for `active` can be replaced with valid Spring profiles to load.
     # Otherwise, it will be filled in by maven when building the JAR file
     # Either way, it can be overridden by `--spring.profiles.active` value passed in the commandline or `-Dspring.profiles.active` set in `JAVA_OPTS`
-    active: no-liquibase, dev
-    group:
-      dev:
-        - dev
-        - api-docs
-        # Uncomment to activate TLS for the dev profile
-        #- tls
+    active:
+    include: no-liquibase, api-docs
   jmx:
     enabled: false
   data:
